[fix] Z-Index issues with ROW and sponsor logos.

--- a/app/plugins/content/qubesmacros/assets/css/pubcards.scss
+++ b/app/plugins/content/qubesmacros/assets/css/pubcards.scss
@@ -26,9 +26,9 @@
 
 .card {
   background-position: center;
+  background-size: cover;
   margin: .5em;
   position: relative;
-  object-fit: cover;
 
   &.active {
 
@@ -40,6 +40,10 @@
         height: 2.5rem;
         max-width: 85%;
       }
+    }
+
+    .card-content {
+      z-index: 80;
     }
 
     .featured-tag {
@@ -64,7 +68,7 @@
   left: 5px;
   position: absolute;
   top: 20px;
-  z-index: 2;
+  z-index: 4;
 }
 
 .logo {
@@ -87,6 +91,7 @@
   overflow: hidden;
   position: relative;
   width: 21.875rem;
+  transition: .4s;
   z-index: 3;
 }
 
@@ -135,6 +140,7 @@
   position: absolute;
   top: -15px;
   left: -10px;
+  z-index: 5;
 
   span {
     padding: .5em .75em;
